--- a/Inventario/Inventario/Views/Tabla_Intemedia_Compras/Index.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Intemedia_Compras/Index.cshtml
@@ -81,7 +81,7 @@
 
 <div class="col-md-6 form-group container">
     @Html.ActionLink("Crear nueva compra", "Create", null, htmlAttributes: new { @class = "btn btn-info" })
-    @Html.ActionLink("Reporte compras", "Reporte", null, htmlAttributes: new { @class = "btn btn-info" })
+    @Html.ActionLink("Generar PDF", "GeneratePDF", null, htmlAttributes: new { @class = "btn btn-info" })
 </div>
 
 
