--- a/Inventario/Inventario/Views/Tabla_Intermedia_Proveen/Index.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Intermedia_Proveen/Index.cshtml
@@ -61,7 +61,7 @@
 
 <div class="col-md-6 form-group container">
     @Html.ActionLink("Crear nuevo registro", "Create", null, htmlAttributes: new { @class = "btn btn-info" })
-    @Html.ActionLink("Reporte", "Reporte", null, htmlAttributes: new { @class = "btn btn-info" })
+    @Html.ActionLink("Generar PDF", "GeneratePDF", null, htmlAttributes: new { @class = "btn btn-info" })
 </div>
 
 
