--- a/Inventario/Inventario/Views/Tabla_Proveedores/Index.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Proveedores/Index.cshtml
@@ -6,14 +6,6 @@
 }
 
 <div class="container form-group"></div>
-<div class="container, col-md-6">
-    <p>
-        @Html.ActionLink("Crear Nuevo Proveedor", "Create")
-    </p>
-    <p>
-        @Html.ActionLink("Reporte", "Reporte")
-    </p>
-</div>
 
 <table class="table">
     <tr>
@@ -77,7 +69,15 @@
                 @Html.ActionLink("Eliminar", "Delete", new { id = item.RFCproveedor })
             }
         </td>
+        <td>
+            @Html.ActionLink("Generar PDF", "GeneratePDF2", new { id = item.RFCproveedor }, htmlAttributes: new { @class = "btn btn-primary" })
+        </td>
     </tr>
 }
 
 </table>
+<div class="container col-md-6">
+    @Html.ActionLink("Crear Nuevo Proveedor", "Create", null, htmlAttributes: new { @class = "btn btn-info" })
+    @Html.ActionLink("Generar PDF", "GeneratePDF", null, htmlAttributes: new { @class = "btn btn-info" })
+
+</div>
