--- a/Inventario/Inventario/Views/Shared/_Layout.cshtml
+++ b/Inventario/Inventario/Views/Shared/_Layout.cshtml
@@ -4,127 +4,110 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    @*@Styles.Render("~/Content/css")*@
+    
+    @Styles.Render("~/assets/css/main.css")
     @Scripts.Render("~/bundles/modernizr")
     
    
 </head>
-<body style="background-color: lightslategrey">
-    
-   
-    
-    <div id="barraNav" style="background-color:rgba(37, 92, 139, 0.92)" class="navbar navbar-header navbar-fixed-top panel-info barraNav" >
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Inventario", "Index", "Home", new { area = "" }, new { @class = "navbar-brand letras" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">                                        
-                    @if (User.IsInRole("Admin"))
-                    {
+<body>
+    <div id="page-wrapper">
 
-                        <li class="dropdown">
-                            <a class="dropdown-toggle letras" data-toggle="dropdown">
-                                Clientes
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Listado", "Index", "Tabla_Clientes")</li>
-                                <li>@Html.ActionLink("Crear Cliente", "Create", "Tabla_Clientes")</li>
-                               
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle letras" data-toggle="dropdown">
-                                Productos
-                                <span class="caret"></span>
-                            </a>
+        <!-- Header -->
+        <div id="header">        
+            <h1>@Html.ActionLink("Inventario", "Index", "Home", new { area = "" }, new { @class = "" })</h1>
+           
+        <nav id="nav">
+
+           
+                @Html.Partial("_LoginPartial")
+            
+            <ul>
+                @if (User.IsInRole("Admin"))
+                {
+
+                    <li class="dropdown">
+                        <a class="dropdown-toggle letras" data-toggle="dropdown">
+                            Clientes
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Listado", "Index", "Tabla_Clientes")</li>
+                            <li>@Html.ActionLink("Crear Cliente", "Create", "Tabla_Clientes")</li>
+
+                        </ul>
+                      </li>
+                      <li class="dropdown">
+                        <a class="dropdown-toggle letras" data-toggle="dropdown">Productos<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Listado", "Index", "Tabla_Productos")</li>
                                 <li>@Html.ActionLink("Crear Producto", "Create", "Tabla_Productos")</li>
-
                             </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle letras" data-toggle="dropdown">
-                                Proveedores
-                                <span class="caret"></span>
-                            </a>
+                       </li>
+                       <li class="dropdown">
+                        <a class="dropdown-toggle letras" data-toggle="dropdown">Proveedores<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Listado", "Index", "Tabla_Proveedores")</li>
                                 <li>@Html.ActionLink("Crear Proveedor", "Create", "Tabla_Proveedores")</li>
-
                             </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle letras" data-toggle="dropdown">
-                                Compras
-                                <span class="caret"></span>
-                            </a>
+                       </li>
+                       <li class="dropdown">
+                        <a class="dropdown-toggle letras" data-toggle="dropdown">Compras<span class="caret"></span></a>
+                           <ul class="dropdown-menu">
+                               <li>@Html.ActionLink("Listado", "Index", "Tabla_Intemedia_Compras")</li>
+                               <li>@Html.ActionLink("Realizar Compra", "Create", "Tabla_Intemedia_Compras")</li>
+                           </ul>
+                       </li>
+                       <li class="dropdown">
+                        <a class="dropdown-toggle letras" data-toggle="dropdown">Proveen<span class="caret"></span></a>
+                           <ul class="dropdown-menu">
+                               <li>@Html.ActionLink("Listado", "Index", "Tabla_Intermedia_Proveen")</li>
+                               <li>@Html.ActionLink("Relacion proveedor a producto", "Create", "Tabla_Intermedia_Proveen")</li>
+                           </ul>
+                       </li>
+                }
+                @if (User.IsInRole("Capturista"))
+                {
+                    <li class="dropdown">
+                        <a class="dropdown-toggle letras" data-toggle="dropdown">Productos<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Listado", "Index", "Tabla_Intemedia_Compras")</li>
-                                <li>@Html.ActionLink("Realizar Compra", "Create", "Tabla_Intemedia_Compras")</li>
-
+                                <li>@Html.ActionLink("Listado", "Index", "Tabla_Productos")</li>
                             </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle letras" data-toggle="dropdown">
-                                Proveen
-                                <span class="caret"></span>
-                            </a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle letras" data-toggle="dropdown">Proveedores<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Listado", "Index", "Tabla_Intermedia_Proveen")</li>
-                                <li>@Html.ActionLink("Relacion proveedor a producto", "Create", "Tabla_Intermedia_Proveen")</li>
-
+                                <li>@Html.ActionLink("Listado", "Index", "Tabla_Proveedores")</li>
                             </ul>
-                        </li>
-
-
-
-                    
-                    }
-                    @if (User.IsInRole("Capturista"))
-                    {
-                        <li class="dropdown">
-                            <a class="dropdown-toggle letras" data-toggle="dropdown">
-                                Productos
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Listado", "Index", "Tabla_Productos")</li>                                
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle letras" data-toggle="dropdown">
-                                Proveedores
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Listado", "Index", "Tabla_Proveedores")</li>                               
-                            </ul>
-                        </li>
-                    }
-                    
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
+                    </li>                  
+                }                   
+            </ul>       
+        </nav>
+    </div>      
+   
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year</p>
-        </footer>
     </div>
+        <section id="banner">
+            <header>
+                <h2> <em> <a href=""></a></em></h2>
+                
+            </header>
+        </section>
 
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    @Scripts.Render("~/assets/js/jquery.min.js")
+    @Scripts.Render("~/assets/js/jquery.dropotron.min.js")
+    @Scripts.Render("~/assets/js/skel.min.js")
+    @Scripts.Render("~/assets/js/util.js")
+    @Scripts.Render("~/assets/js/main.js")
+
 </body>
+
 </html>
