--- a/Inventario/Inventario/Views/Shared/_Layout.cshtml
+++ b/Inventario/Inventario/Views/Shared/_Layout.cshtml
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @*@Styles.Render("~/Content/css")*@
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    @Scripts.Render("~/bundles/bootstrap")
     @Styles.Render("~/assets/css/main.css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/assets/js/jquery.min.js")
+    @Scripts.Render("~/assets/js/jquery.dropotron.min.js")
+    @Scripts.Render("~/assets/js/skel.min.js")
+    @Scripts.Render("~/assets/js/util.js")
+    @Scripts.Render("~/assets/js/main.js")
     
    
 </head>
@@ -18,10 +24,12 @@
         <div id="header">        
             <h1>@Html.ActionLink("Inventario", "Index", "Home", new { area = "" }, new { @class = "" })</h1>
            
-        <nav id="nav">
+        <nav id="nav" >
 
-           
+           <div class="container">
                 @Html.Partial("_LoginPartial")
+           </div>
+                
             
             <ul>
                 @if (User.IsInRole("Admin"))
@@ -99,14 +107,10 @@
 
     </div>
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+   
     @RenderSection("scripts", required: false)
 
-    @Scripts.Render("~/assets/js/jquery.min.js")
-    @Scripts.Render("~/assets/js/jquery.dropotron.min.js")
-    @Scripts.Render("~/assets/js/skel.min.js")
-    @Scripts.Render("~/assets/js/util.js")
-    @Scripts.Render("~/assets/js/main.js")
+    
 
 </body>
 
