--- a/Inventario/Inventario/Views/Shared/_LoginPartial.cshtml
+++ b/Inventario/Inventario/Views/Shared/_LoginPartial.cshtml
@@ -6,15 +6,16 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Hola " + User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage"})</li>
-        <li><a  href="javascript:document.getElementById('logoutForm').submit()">Cerrar Sesion</a></li>
+        
+        <li class="col-md-12">@Html.ActionLink("Hola " + User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "btn btn-info" })</li>
+        <li class="col-md-12"><a class="btn btn-info"  href="javascript:document.getElementById('logoutForm').submit()">Cerrar Sesion</a></li>
     </ul>
     }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Registrate", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Inicia Sesion", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li class="col-md-12">@Html.ActionLink("Registrate", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" , @class = "btn btn-info"  })</li>
+        <li class="col-md-12">@Html.ActionLink("Inicia Sesion", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn btn-info" })</li>
     </ul>
 }
