--- a/Inventario/Inventario/Views/Tabla_Intemedia_Compras/Index.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Intemedia_Compras/Index.cshtml
@@ -53,21 +53,21 @@
                            </td>
                            <td>
                                @if (User.IsInRole("Admin"))
-                                   {
-                                       @Html.ActionLink("Edit", "Edit", new { id = item.compraID })                                                                      
+                               {
+                                @Html.ActionLink(" ", "Edit", new { id = item.compraID }, htmlAttributes: new { @class = "glyphicon glyphicon-pencil" })
                                }
                            </td>
                            <td>
                                @if (User.IsInRole("Admin"))
                                {
-                                @Html.ActionLink("Detalles", "Details", new { id = item.compraID })
+                               @Html.ActionLink(" ", "Details", new { id = item.compraID }, htmlAttributes: new { @class = "glyphicon glyphicon-eye-open" })
                                }
                            </td>
 
                            <td>
                                @if (User.IsInRole("Admin"))
                                {                                                                    
-                                   @Html.ActionLink("Eliminar", "Delete", new { id = item.compraID })
+                                  @Html.ActionLink(" ", "Delete", new { id = item.compraID }, htmlAttributes: new { @class = "glyphicon glyphicon-trash" })
                                }
                            </td>
 
