--- a/Inventario/Inventario/Views/Tabla_Intermedia_Proveen/Reporte.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Intermedia_Proveen/Reporte.cshtml
@@ -19,50 +19,67 @@
     @Scripts.Render("~/bundles/bootstrap")
 </head>
 <body>
-    <div class="container panel-body" id="Reporte">
-        <table class="table table-bordered">
-            <tr>  
-                <th>
-                    Nombre del producto
-                </th>
-                <th>
-                    Nombre del proveedor
-                </th>
-                <th>
-                    Fecha Proveen
-                </th>
-            </tr>
-
-            @foreach (var item in Model)
-            {
-                <tr>                    
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Tabla_Productos.nombreProducto)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Tabla_Proveedores.nombreProveedor)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.fechaProveen)
-                    </td>
-
-
+    <div class="container, form-group" style="position:center">
+        <img style="height:206px; width:206px;" src="~/images/inventarioasda.png" />
+    </div> <br />
+    <table>
+        <tr>
+            <th>
+                <h3><strong>Reporte General</strong> </h3>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Programa Inventario de produtos.
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Calle Puerto San Felipe #24, Lopez Portillo.<br />
+                Numero: 6515139649 <br />
+                Fecha y hora de reporte: @DateTime.Now
+            </th>
+        </tr>
+    </table>
+    <br />
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">Proveen</h3>
+        </div>
+        <div class="panel-body ">
+            <table class="table table-bordered">
+                <tr>
+                    <th>
+                        Nombre del producto
+                    </th>
+                    <th>
+                        Nombre del proveedor
+                    </th>
+                    <th>
+                        Fecha Proveen
+                    </th>
                 </tr>
-            }
 
-        </table>
-    </div>
-    <div class="container">
-        <input type="button" class="btn" onclick="DescargarPDF('Reporte','ReporteProveen')" name="Descargar PDF" value="Descargar PDF" />
-    </div>
+                @foreach (var item in Model)
+            {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Tabla_Productos.nombreProducto)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Tabla_Proveedores.nombreProveedor)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.fechaProveen)
+                        </td>
+
+
+                    </tr>
+                }
+
+            </table>
+        </div>
+       </div>
+    
 </body>
 </html>
-<script>
-        function DescargarPDF(ContenidoID, nombre) {
-            var pdf = new jsPDF('p', 'pt', 'b2');
-            html = $('#' + ContenidoID).html();
-            specialElementHandlers = {};
-            margins = { top: 10, bottom: 20, left: 20, width: 522 };
-            pdf.fromHTML(html, margins.left, margins.top, { 'width': margins.width }, function (dispose) { pdf.save(nombre + '.pdf'); }, margins);
-        }
-</script>
