--- a/Inventario/Inventario/Views/Tabla_Productos/Index.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Productos/Index.cshtml
@@ -7,62 +7,80 @@
 
 <div class="container form-group"></div>
 
+<div class="form-group container">
+<div class="panel panel-info">
+    <div class="panel-heading">
+        <h3 class="panel-title">Productos</h3>
+    </div>
+    <div class="panel-body ">
+        <table class="table table-striped">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.nombreProducto)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.precioVenta)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.precioCompra)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.pesoNeto)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.fechaEntrada)
+                </th>
+                <th></th>
+                <th></th>
+                <th></th>
 
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.nombreProducto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.precioVenta)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.precioCompra)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.pesoNeto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.fechaEntrada)
-        </th>
-        <th></th>
-      
-    </tr>
+            </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.nombreProducto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.precioVenta)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.precioCompra)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.pesoNeto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.fechaEntrada)
-        </td>       
-        <td>
-            @if (User.IsInRole("Admin"))
+            @foreach (var item in Model)
             {
-                @Html.ActionLink("Edit", "Edit", new { id = item.productoID }) 
-                @Html.ActionLink("Details", "Details", new { id = item.productoID }) 
-                @Html.ActionLink("Delete", "Delete", new { id = item.productoID })
-                
-            }
-            
-        </td>
-    </tr>
-}
-    
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.nombreProducto)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.precioVenta)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.precioCompra)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.pesoNeto)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.fechaEntrada)
+                    </td>
+                    
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <td>
+                                @Html.ActionLink(" ", "Edit", new { id = item.productoID }, htmlAttributes: new { @class = "glyphicon glyphicon-pencil" })
 
-</table>
-<div class="container col-md-6">
-    @Html.ActionLink("Crear nuevo producto", "Create",null, htmlAttributes: new { @class = "btn btn-primary" })
-    @Html.ActionLink("Generar PDF", "GeneratePDF", null, htmlAttributes: new { @class = "btn btn-primary" })
-    
-</div>
+                            </td>
+                            <td>
+                                @Html.ActionLink(" ", "Details", new { id = item.productoID }, htmlAttributes: new { @class = "glyphicon glyphicon-eye-open" })
+                            </td>
+                            <td>
+                                @Html.ActionLink(" ", "Delete", new { id = item.productoID }, htmlAttributes: new { @class = "glyphicon glyphicon-trash" })
+                            </td>                            
+                        }
+
+                    
+                </tr>
+            }
+
+
+        </table>
+        </div>
+    </div>
+    </div>
+
+        <div class="container col-md-6">
+            @Html.ActionLink("Crear nuevo producto", "Create", null, htmlAttributes: new { @class = "btn btn-info" })
+            @Html.ActionLink("Generar PDF", "GeneratePDF", null, htmlAttributes: new { @class = "btn btn-info" })
+
+        </div>
