--- a/Inventario/Inventario/Views/Tabla_Proveedores/Reporte.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Proveedores/Reporte.cshtml
@@ -13,68 +13,90 @@
     <script src="~/Scripts/jspdf.debug.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 </head>
 <body>
-    <div class="container panel-body" id="Reporte">
-        <table class="table table-bordered">
-            <tr>
-                <th>
-                    Nombre Proveedor
-                </th>
-                <th>
-                    Apellido Paterno
-                </th>
-                <th>
-                    Apellido Materno
-                </th>
-                <th>
-                    Telefono Proveedor
-                </th>
-                <th>
-                    Direccion Proveedor
-                </th>
+    <div class="container, form-group" style="position:center">
+        <img style="height:206px; width:206px;" src="~/images/inventarioasda.png" />
+    </div> <br />
+    <table>
+        <tr>
+            <th>
+                <h3><strong>Reporte General</strong> </h3>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Programa Inventario de produtos.
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Calle Puerto San Felipe #24, Lopez Portillo.<br />
+                Numero: 6515139649 <br />
+                Fecha y hora de reporte: @DateTime.Now
+            </th>
+        </tr>
+    </table>
+    <br />
+    <div class="form-group container">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">Proveedores</h3>
+            </div>
+            <div class="panel-body ">
+                <table class="table">
+                    <tr>
+                        <th>
+                            Nombre Proveedor
+                        </th>
+                        <th>
+                            Apellido Paterno
+                        </th>
+                        <th>
+                            Apellido Materno
+                        </th>
+                        <th>
+                            Telefono Proveedor
+                        </th>
+                        <th>
+                            Direccion Proveedor
+                        </th>
 
-            </tr>
+                    </tr>
 
-            @foreach (var item in Model)
+                    @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.nombreProveedor)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.apellidoPaternoProveedor)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.apellidoMaternoProveedor)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.telefonoProveedor)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.direccionProveedor)
-                    </td>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.nombreProveedor)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.apellidoPaternoProveedor)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.apellidoMaternoProveedor)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.telefonoProveedor)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.direccionProveedor)
+                            </td>
 
-                </tr>
-            }
+                        </tr>
+                    }
 
-        </table>
-    </div>
-    <div class="container">
-        <input type="button" class="btn" onclick="DescargarPDF('Reporte','ReporteProveedores')" name="Descargar PDF" value="Descargar PDF" />
-    </div>
+                </table>
+            </div>
+            </div>
+        </div>
+    
+            
 </body>
 </html>
-<script>
-        function DescargarPDF(ContenidoID, nombre) {
-            var pdf = new jsPDF('p', 'pt', 'b2');
-            html = $('#' + ContenidoID).html();
-            specialElementHandlers = {};
-            margins = { top: 10, bottom: 20, left: 20, width: 522 };
-            pdf.fromHTML(html, margins.left, margins.top, { 'width': margins.width }, function (dispose) { pdf.save(nombre + '.pdf'); }, margins);
-        }
-</script>
+
