--- a/Inventario/Inventario/Views/Tabla_Proveedores/Index.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Proveedores/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Inventario.Models.Tabla_Proveedores>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Proveedores";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
