--- a/Inventario/Inventario/Views/Account/Register.cshtml
+++ b/Inventario/Inventario/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Inventario.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registrar";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Crear una nueva cuenta</h4>
     <hr />
 
     <div hidden class="form-group">
@@ -71,7 +71,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Registrar" />
         </div>
     </div>
 }
