--- a/Inventario/Inventario/Views/Tabla_Clientes/Delete.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Clientes/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Inventario.Models.Tabla_Clientes
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container form-group"> <h2>Eliminar</h2></div>
 
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que quieres eliminar esto?</h3>
 <div>
    
     <dl class="dl-horizontal">
@@ -66,8 +66,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Regresar a la lista", "Index")
         </div>
     }
 </div>
