--- a/Inventario/Inventario/Views/Tabla_Intermedia_Proveen/Details.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Intermedia_Proveen/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Inventario.Models.Tabla_Intermedia_Proveen
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.proveenID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.proveenID }) |
+    @Html.ActionLink("Regresar a la lista", "Index")
 </p>
