--- a/Inventario/Inventario/Views/Tabla_Proveedores/Delete.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Proveedores/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Inventario.Models.Tabla_Proveedores
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Borrar" class="btn btn-default" /> |
+            @Html.ActionLink("Regresar a la lista", "Index")
         </div>
     }
 </div>
