--- a/Inventario/Inventario/Views/Tabla_Proveedores/Details.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Proveedores/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Inventario.Models.Tabla_Proveedores
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -52,8 +52,8 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.RFCproveedor }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.RFCproveedor }) |
+    @Html.ActionLink("Regresar a la lista", "Index")
 </p>
 <legend>Historial de compras</legend>
 
@@ -69,8 +69,8 @@
         <tr>            
             <td>@producto.Tabla_Productos.nombreProducto</td>
             <td>@producto.fechaProveen</td>            
-            <td>@Html.ActionLink("Delete", "Delete", "Tabla_Intermedia_Proveen", new { id = producto.proveenID }, null)  </td>
-            <td>@Html.ActionLink("Details", "Details", "Tabla_Intermedia_Proveen", new { id = producto.proveenID }, null)  </td>
+            <td>@Html.ActionLink("Eliminar", "Delete", "Tabla_Intermedia_Proveen", new { id = producto.proveenID }, null)  </td>
+            <td>@Html.ActionLink("Detalles", "Details", "Tabla_Intermedia_Proveen", new { id = producto.proveenID }, null)  </td>
         </tr>
     }
 
